packages/dockview-core/src/dockview/dockviewComponent.scss
.dv-dockview {
    position: relative;
    background-color: var(--dv-group-view-background-color);

    .dv-watermark-container {
        position: absolute;
        top: 0px;
        left: 0px;
        height: 100%;
        width: 100%;
        z-index: 1;
    }

    .dv-overlay-render-container {
        position: relative;
    }

    .split-view-container {
        &.horizontal {
            > .view-container > .view {
                &:not(:last-child) {
                    .groupview {
                        border-right: var(--dv-group-gap-size) solid transparent;
                    }
                }

                &:not(:first-child) {
                    .groupview {
                        border-left: var(--dv-group-gap-size) solid transparent;
                    }
                }
            }
        }

        &.vertical {
            > .view-container > .view {
                &:not(:last-child) {
                    .groupview {
                        border-bottom: var(--dv-group-gap-size) solid
                            transparent;
                    }
                }

                &:not(:first-child) {
                    .groupview {
                        border-top: var(--dv-group-gap-size) solid transparent;
                    }
                }
            }
        }
    }
}

.groupview {
    &.active-group {
        > .tabs-and-actions-container > .tabs-container > .tab {
            &.active-tab {
                background-color: var(
                    --dv-activegroup-visiblepanel-tab-background-color
                );
                color: var(--dv-activegroup-visiblepanel-tab-color);
            }
            &.inactive-tab {
                background-color: var(
                    --dv-activegroup-hiddenpanel-tab-background-color
                );
                color: var(--dv-activegroup-hiddenpanel-tab-color);
            }
        }
    }
    &.inactive-group {
        > .tabs-and-actions-container > .tabs-container > .tab {
            &.active-tab {
                background-color: var(
                    --dv-inactivegroup-visiblepanel-tab-background-color
                );
                color: var(--dv-inactivegroup-visiblepanel-tab-color);
            }
            &.inactive-tab {
                background-color: var(
                    --dv-inactivegroup-hiddenpanel-tab-background-color
                );
                color: var(--dv-inactivegroup-hiddenpanel-tab-color);
            }
        }
    }
}

/**
 * when a tab is dragged we lose the above stylings because they are conditional on parent elements
 * therefore we also set some stylings for the dragging event
 **/
.tab {
    &.dv-tab-dragging {
        background-color: var(
            --dv-activegroup-visiblepanel-tab-background-color
        );
        color: var(--dv-activegroup-visiblepanel-tab-color);
    }
}

